# AgosGE

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Agos/: CMakeLists.txt  agos.cpp  agos.h
Agos/models/dungeon_pack/: Description.txt
Agos/shaders/: compile_frag_shader.sh  compile_vert_shader.sh  vert_shader.json
Agos/shaders/Agos_fragment_shader/: basic_shader.frag  default_shader.frag  lighting_shader.frag  manifest.json
Agos/shaders/Agos_vertex_shader/: basic_shader.vert  default_shader.vert  generic_shader.vert  manifest.json
Agos/shaders/fragment_shader/: manifest.json  shader.frag
Agos/shaders/vertex_shader/: manifest.json  shader.vert
Agos/src/: agos.h  base.h  core.h  entry_point.cpp  entry_point.h  logger.cpp
Agos/src/debug_layers/: debug_layers.cpp  debug_layers.h  vulkan_debug_layers.cpp  vulkan_debug_layers.h
Agos/src/entities/: entities.cpp  entities.h
Agos/src/entry_point/: entry_point.cpp  entry_point.h
Agos/src/event_system/: event_system.h  glfw_events.cpp  glfw_events.h
Agos/src/file_format/: ags_file_model.cpp  ags_file_model.h  ags_file_section.cpp  ags_file_section.h
Agos/src/logger/: logger.cpp  logger.h
Agos/src/renderer/: camera.cpp  camera.h  glfw_instance.cpp  glfw_instance.h  model.cpp  model.h  model_loader.cpp  model_loader.h  renderer.cpp  renderer.h  vulkan_buffers.cpp  vulkan_buffers.h  vulkan_command_pool.cpp  vulkan_command_pool.h  vulkan_descriptor.cpp  vulkan_descriptor.h  vulkan_framebuffers.cpp  vulkan_framebuffers.h  vulkan_graphics_pipeline.cpp  vulkan_graphics_pipeline.h  vulkan_instance.cpp  vulkan_instance.h  vulkan_logical_device.cpp  vulkan_logical_device.h  vulkan_physical_device.cpp  vulkan_physical_device.h  vulkan_presentation.cpp  vulkan_presentation.h  vulkan_render_pass.cpp  vulkan_render_pass.h  vulkan_ressources.cpp  vulkan_ressources.h  vulkan_swapchain.cpp  vulkan_swapchain.h  vulkan_textures.cpp  vulkan_textures.h
Agos/src/renderer/camera/: camera.cpp  camera.h
Agos/src/renderer/debug_layers/: vulkan_debug_layers.cpp
Agos/src/renderer/glfw/: glfw_events.cpp  glfw_events.h  glfw_instance.cpp  glfw_instance.h
Agos/src/renderer/imgui/: agos_imgui.cpp  agos_imgui.h  layout.ini
Agos/src/renderer/imgui/backends/imgui_implementations/: imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_opengl2.cpp  imgui_impl_opengl2.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imgui_impl_vulkan.cpp  imgui_impl_vulkan.h
Agos/src/renderer/imgui/opengl/: opengl_imgui.cpp
Agos/src/renderer/imgui/vulkan/: vulkan_imgui.cpp  vulkan_imgui.h  vulkan_imgui_overlay.cpp  vulkan_imgui_overlay.h
Agos/src/renderer/modeling/: lighting_map.cpp  lighting_map.h  model.cpp  model.h
Agos/src/renderer/opengl_app/: opengl_app.cpp
Agos/src/renderer/opengl_base/: opengl_base.cpp
Agos/src/renderer/vulkan_app/: vulkan_app.cpp  vulkan_app.h  vulkan_app_helpers.cpp  vulkan_app_helpers.h  vulkan_entity.cpp  vulkan_entity.h  vulkan_helpers.cpp  vulkan_helpers.h  vulkan_modeling.cpp  vulkan_modeling.h
Agos/src/renderer/vulkan_base/: vulkan_base.cpp  vulkan_base.h
Agos/src/scene_manager/: scene_manager.cpp  scene_manager.h
docs/: AGS.md
examples/: ags_creator.cpp  init_agosge.cpp
examples/scene_1-hello_agos/: entities.json
scripts/: build_linux.sh  build_windows.bat
